local/logs/project.log
2019-12-17T10:13:57.441Z - normal: Load ~/.CocosCreator/settings.json
2019-12-17T10:13:57.528Z - normal: Initializing Asset Database
2019-12-17T10:13:57.543Z - normal: checking language setting...
2019-12-17T10:13:57.543Z - normal: Language: zh
2019-12-17T10:13:59.374Z - success: preview server running at http://localhost:7456
2019-12-17T10:13:59.385Z - success: protocol editor-framework registered
2019-12-17T10:13:59.385Z - success: protocol app registered
2019-12-17T10:13:59.385Z - success: protocol theme registered
2019-12-17T10:13:59.385Z - success: protocol packages registered
2019-12-17T10:13:59.385Z - success: protocol uuid registerred
2019-12-17T10:13:59.385Z - success: protocol db registerred
2019-12-17T10:13:59.385Z - success: protocol thumbnail registerred
2019-12-17T10:13:59.386Z - success: protocol unpack registerred
2019-12-17T10:13:59.386Z - success: protocol disable-commonjs registerred
2019-12-17T10:13:59.467Z - normal: connected!
2019-12-17T10:13:59.468Z - normal: Check project /Users/huabo/Projects/iptv_wuxia
2019-12-17T10:13:59.469Z - normal: Initializing project /Users/huabo/Projects/iptv_wuxia
2019-12-17T10:13:59.570Z - success: adapters loaded
2019-12-17T10:13:59.606Z - success: asset-db-debugger loaded
2019-12-17T10:14:00.158Z - success: fb-audience-network loaded
2019-12-17T10:14:00.238Z - success: fb-live-stream loaded
2019-12-17T10:14:00.241Z - success: google-play-instant loaded
2019-12-17T10:14:00.297Z - success: huawei-runtime loaded
2019-12-17T10:14:00.302Z - success: jkw-adapter loaded
2019-12-17T10:14:00.321Z - success: jsb-adapter loaded
2019-12-17T10:14:00.369Z - success: oppo-runtime loaded
2019-12-17T10:14:00.407Z - success: package-manager loaded
2019-12-17T10:14:00.434Z - success: runtime-dev-tools loaded
2019-12-17T10:14:00.474Z - success: sdkbox loaded
2019-12-17T10:14:00.494Z - success: ui-kit-preview-extra loaded
2019-12-17T10:14:00.497Z - success: ui-kit-preview loaded
2019-12-17T10:14:00.508Z - success: vivo-runtime loaded
2019-12-17T10:14:00.523Z - success: alipay-minigame loaded
2019-12-17T10:14:00.572Z - success: assets loaded
2019-12-17T10:14:00.574Z - success: baidugame-opendata loaded
2019-12-17T10:14:00.576Z - success: baidugame loaded
2019-12-17T10:14:00.580Z - success: builder loaded
2019-12-17T10:14:00.984Z - success: cocos-services loaded
2019-12-17T10:14:00.988Z - success: console loaded
2019-12-17T10:14:00.999Z - success: fb-instant-games loaded
2019-12-17T10:14:01.002Z - success: game-window loaded
2019-12-17T10:14:01.003Z - success: google-instant-games loaded
2019-12-17T10:14:01.008Z - success: hierarchy loaded
2019-12-17T10:14:01.011Z - success: inspector loaded
2019-12-17T10:14:02.116Z - success: cpk-publish loaded
2019-12-17T10:14:02.119Z - success: keystore loaded
2019-12-17T10:14:02.164Z - success: node-library loaded
2019-12-17T10:14:02.165Z - success: open-recent-items loaded
2019-12-17T10:14:02.167Z - success: package-asset loaded
2019-12-17T10:14:02.169Z - success: preferences loaded
2019-12-17T10:14:02.172Z - success: project-exporter loaded
2019-12-17T10:14:02.176Z - success: project-importer loaded
2019-12-17T10:14:02.179Z - success: project-settings loaded
2019-12-17T10:14:02.183Z - success: scene loaded
2019-12-17T10:14:02.184Z - success: simulator-debugger loaded
2019-12-17T10:14:02.185Z - success: sprite-editor loaded
2019-12-17T10:14:02.188Z - success: store loaded
2019-12-17T10:14:02.192Z - success: timeline loaded
2019-12-17T10:14:02.195Z - success: wechatgame-opendata loaded
2019-12-17T10:14:02.216Z - success: wechatgame loaded
2019-12-17T10:14:02.247Z - success: xiaomi-runtime loaded
2019-12-17T10:14:03.111Z - normal: Initializing Cocos2d
2019-12-17T10:14:05.650Z - normal: Initializing engine extends
2019-12-17T10:14:06.273Z - info: Cocos Service load base data!
2019-12-17T10:14:07.110Z - normal: Loading packages
2019-12-17T10:14:07.115Z - normal: Watching packages
2019-12-17T10:14:07.349Z - normal: Run Application
2019-12-17T10:36:37.504Z - failed: [db-task][sync-changes] Failed to import asset /Users/huabo/Projects/iptv_wuxia/assets/Script/Config/Config.js, message: Compile error: SyntaxError: /Users/huabo/Projects/iptv_wuxia/assets/Script/Config/Config.js: Unexpected token (49:1)
  47 |         return arguments[0][Math.floor(this.randomRange(0, arguments[0].length))];
  48 |     }
> 49 | },
     |  ^
  50 | 
  51 | 
    at Parser.pp$5.raise (/Applications/CocosCreator.app/Contents/Resources/app.asar/node_modules/babylon/lib/index.js:4454:13)
    at Parser.pp.unexpected (/Applications/CocosCreator.app/Contents/Resources/app.asar/node_modules/babylon/lib/index.js:1761:8)
    at Parser.pp$3.parseExprAtom (/Applications/CocosCreator.app/Contents/Resources/app.asar/node_modules/babylon/lib/index.js:3750:12)
    at Parser.pp$3.parseExprSubscripts (/Applications/CocosCreator.app/Contents/Resources/app.asar/node_modules/babylon/lib/index.js:3494:19)
    at Parser.pp$3.parseMaybeUnary (/Applications/CocosCreator.app/Contents/Resources/app.asar/node_modules/babylon/lib/index.js:3474:19)
    at Parser.pp$3.parseExprOps (/Applications/CocosCreator.app/Contents/Resources/app.asar/node_modules/babylon/lib/index.js:3404:19)
    at Parser.pp$3.parseMaybeConditional (/Applications/CocosCreator.app/Contents/Resources/app.asar/node_modules/babylon/lib/index.js:3381:19)
    at Parser.pp$3.parseMaybeAssign (/Applications/CocosCreator.app/Contents/Resources/app.asar/node_modules/babylon/lib/index.js:3344:19)
    at Parser.pp$3.parseExpression (/Applications/CocosCreator.app/Contents/Resources/app.asar/node_modules/babylon/lib/index.js:3306:19)
    at Parser.pp$1.parseStatement (/Applications/CocosCreator.app/Contents/Resources/app.asar/node_modules/babylon/lib/index.js:1906:19)
